--- a/css/xjs.css
+++ b/css/xjs.css
@@ -78,11 +78,16 @@
 	background-color: #ffcece;
 }
 
+.table-new tbody tr td{
+	font-size: 12px;
+	font-family: "宋体";
+}
+
 .link{
 	color:#1192ff;
 }
 .link:hover{
-	color:red;
+	color:#ff8167;
 	text-decoration: underline;
 }
 /* 统计数据 */
@@ -90,6 +95,10 @@
 	background: #f2f2f2;
     color: #333;
     font-size: 14px;
+}
+.table-count tr td{
+	font-size: 12px;
+	font-family: "宋体";
 }
 /* 定位input后面的单位 */
 .input-position{
@@ -102,4 +111,30 @@
 	position: absolute;
 	right: 5px;
 	top: 9px;
+}
+
+/* 弹窗表单样式 */
+.form-model .form-group{
+	margin-bottom: 10px;
+	margin-left:10px;
+}
+.form-model .form-group .control-label{
+	width:75px;
+}
+
+.borrowbox{
+	margin-top:10px;
+	padding:10px;
+	border:1px solid #dbdbdb;
+	display:flex;
+	flex-wrap:wrap;
+}
+
+.borrowbox .item{
+	width:170px;
+	margin-bottom: 10px;
+}
+
+.borrowbox .item span{
+	margin-left: 10px;
 }
