--- a/css/style.css
+++ b/css/style.css
@@ -3051,7 +3051,7 @@ ul.amounts li {
 input:focus:invalid:focus,textarea:focus:invalid:focus,select:focus:invalid:focus,.cmxform .form-group input.error,.cmxform .form-group textarea.error {
     border-color:#B94A48 !important;
 }
-#signupForm label.error {
+label.error {
     display:inline;
     margin:5px 0px;
     width:auto;
