--- a/css/style.css
+++ b/css/style.css
@@ -3052,7 +3052,7 @@ input:focus:invalid:focus,textarea:focus:invalid:focus,select:focus:invalid:focu
     border-color:#B94A48 !important;
 }
 label.error {
-    display:inline;
+    display:block;
     margin:5px 0px;
     width:auto;
     color:#B94A48;
